--- a/index.html
+++ b/index.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <title>Document</title>
-</head>
-<body>
+<html lang="ru" data-ng-app>
+    <head>
+        <meta charset="UTF-8">
+        <title>Document</title>
+    </head>
+    <body>
 
-    
+    <link rel="stylesheet" href="/Content/css/Components/reset.css">
+    <link rel="stylesheet" href="/Content/css/Components/grid.css">
+    <link rel="stylesheet" href="/Content/css/Components/navbar.css">
+    <link rel="stylesheet" href="/Content/css/Components/text.css">
+    <link rel="stylesheet" href="/Content/css/Components/utilits.css">
 
-</body>
+    <link rel="stylesheet" href="/Content/css/main.css">
+
+    <header class="container container--center header">
+        <div>
+            <a href="#" class="header__lang">English version →</a>
+        </div>
+        <div class="header__logo">
+            <img src="/Content/img/logo_25.png" alt="">
+        </div>
+    </header>
+
+    <nav class="container container--center">
+        <div class="col--1-1">
+            <ul class="navbar">
+                <li><a href="#">Недвижимость</a></li>
+                <li><a href="#">Услуги</a></li>
+                <li><a href="#">Ипотека</a></li>
+                <li><a href="#">Карьера</a></li>
+                <li><a href="#">О компании</a></li>
+                <li><a href="#">Новости и аналитика</a></li>
+                <li><a href="#">Наши офисы</a></li>
+            </ul>
+        </div>
+    </nav>
+        {{1 + 1}}
+
+
+        <script src="/bower_components/angular/angular.min.js"></script>
+    </body>
 </html>
