--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="/Content/css/Components/utilits.css">
     <link rel="stylesheet" href="/Content/css/Components/panel.css">
     <link rel="stylesheet" href="/Content/css/Components/list.css">
+    <link rel="stylesheet" href="/Content/css/Components/input.css">
+    <link rel="stylesheet" href="/Content/css/Components/button.css">
 
     <link rel="stylesheet" href="/Content/css/main.css">
 
@@ -100,7 +102,7 @@
                         <span class="list__teaser"><img src="/Content/img/news/news-1.png" alt=""></span>
                     </a>
                     <span class="list__date">13.05.2016</span>
-                    <a href="#">
+                    <a href="#" class="list__link">
                         Цена ВИП-ложи на финальные игры Чемпионата мира по хоккею равна стоимости трехкомнатной квартиры в центре Москвы
                     </a>
                 </li>
@@ -110,7 +112,7 @@
                     </a>
                     <span class="list__date">13.05.2016</span>
                     <a href="#" class="list__link">
-                        Цена ВИП-ложи на финальные игры Чемпионата мира по хоккею равна стоимости трехкомнатной квартиры в центре Москвы
+                        «Респектабельное» Можайское шоссе за год потеряло в цене 46%, тогда как «неблагополучное» Горьковское подорожало на 18%
                     </a>
                 </li>
                 <li>
@@ -118,22 +120,45 @@
                         <span class="list__teaser"><img src="/Content/img/news/news-3.png" alt=""></span>
                     </a>
                     <span class="list__date">13.05.2016</span>
-                    <a href="#">
-                        Цена ВИП-ложи на финальные игры Чемпионата мира по хоккею равна стоимости трехкомнатной квартиры в центре Москвы
-                    </a>                </li>
+                    <a href="#" class="list__link">
+                        «Каникулярный» найм квартиры: сдал в Москве, снял в Крыму – усиливающийся тренд бюджетного отдыха
+                    </a>
+                </li>
                 <li>
                     <a href="#">
                         <span class="list__teaser"><img src="/Content/img/news/news-4.png" alt=""></span>
                     </a>
                     <span class="list__date">13.05.2016</span>
-                    <a href="#">
-                        Цена ВИП-ложи на финальные игры Чемпионата мира по хоккею равна стоимости трехкомнатной квартиры в центре Москвы
+                    <a href="#" class="list__link">
+                        «Рекорды рынка недвижимости-2016»: голосуйте за лучших!
                     </a>
                 </li>
             </ul>
         </div>
     </div>
 
-        <script src="/bower_components/angular/angular.min.js"></script>
+    <div class="container container--center">
+        <div class="panel panel--box">
+            <h2 class="text--h2">Продажа недвижимости в Москве и Подмосковье</h2>
+            <p>Агентство ИНКОМ-Недвижимость уже более 20 лет предоставляет риэлторские услуги юридическим и&nbsp;физическим лицам в&nbsp;ключевых сегментах рынка недвижимости: покупка и&nbsp;продажа квартир на&nbsp;первичном и&nbsp;вторичном рынках городского и&nbsp;загородного жилья, аренда квартир, а&nbsp;также проводим сделки с&nbsp;коммерческой недвижимостью. Жилая и&nbsp;коммерческая недвижимость Москвы и&nbsp;Московской области представлена в&nbsp;нашем каталоге в&nbsp;самом полном объеме, в&nbsp;наличии есть множество вариантов жилья различного типа, предоставляемого как с&nbsp;помощью риэлторов, так и&nbsp;без посредников.</p>
+            <p>Мы&nbsp;оказываем риэлторские услуги по&nbsp;аренде и&nbsp;продаже недвижимости во&nbsp;всех сегментах. С&nbsp;помощью наших специалистов вы&nbsp;сможете купить элитную недвижимость в&nbsp;Москве и&nbsp;Подмосковье, а&nbsp;также приобрести жилье эконом класса. В&nbsp;нашей базе недвижимости, содержащей огромное количество предложений, найдутся как эксклюзивные квартиры, так и&nbsp;бюджетные варианты, а&nbsp;также большое количество загородного жилья всех категорий. Специалисты нашего агентства помогут в&nbsp;подборе оптимального для вас варианта и&nbsp;оформят сделку по&nbsp;<nobr>купле продаже</nobr> недвижимости максимально надежно и&nbsp;быстро!</p>
+
+            <h2 class="text--h2">Каталог объектов</h2>
+            <p>Для получения информации по&nbsp;нашей базе недвижимости выберите подходящий тип объекта и&nbsp;нажмите «Найти».</p>
+
+            <div>
+                <!-- <input type="text" class="input"> -->
+                <select name="sources" class="input input--select" placeholder="Квартиры и комнаты">
+                    <option value="profile">Квартиры и комнаты</option>
+                    <option value="word">Новостройки</option>
+                    <option value="hashtag">Аренда квартир и комнат</option>
+                </select>
+                <a href="#" class="button button--green">Найти</a>
+            </div>
+        </div>
+    </div>
+
+
+    <script src="/bower_components/angular/angular.min.js"></script>
     </body>
 </html>
