Add style for footer

--- a/index.html
+++ b/index.html
@@ -158,6 +158,14 @@
         </div>
     </div>
 
+    <footer class="footer">
+        <div class="footer__top">
+            © 2001-2016. ИНКОМ-Недвижимость  |
+            <a href="#" class="link--reset" rel="nofollow">Ограничение ответственности</a> |
+            <a href="#" class="link--reset" rel="nofollow">Карта сайта</a>
+        </div>
+    </footer>
+
 
     <script src="/bower_components/angular/angular.min.js"></script>
     </body>
