Fixed slider JS

--- a/index.html
+++ b/index.html
@@ -58,15 +58,35 @@
     <div class="container container--center slider">
         <div class="slider__shadow"></div>
         <div class="panel">
-            <div class="owl-carousel slider-main">
-                <div class="owl-item slider__item slider__item--1">
+            <div class="owl-carousel">
+                <div>
                     <a href="#">
                         <img src="/Content/img/slider/slide-1.jpg" alt="">
                     </a>
                 </div>
-                <div class="item slider__item slider__item--2">
+                <div>
                     <a href="#">
                         <img src="/Content/img/slider/slide-2.jpg" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a href="#">
+                        <img src="/Content/img/slider/slide-3.jpg" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a href="#">
+                        <img src="/Content/img/slider/slide-4.jpg" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a href="#">
+                        <img src="/Content/img/slider/slide-5.jpg" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a href="#">
+                        <img src="/Content/img/slider/slide-6.jpg" alt="">
                     </a>
                 </div>
             </div>
