--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="ru" data-ng-app>
+<html lang="ru" data-ng-app="app">
     <head>
         <meta charset="UTF-8">
         <title>Document</title>
     </head>
-    <body>
+    <body data-ng-controller="homeController">
 
-    <link rel="stylesheet" href="bower_components/owl.carousel/src/css/owl.carousel.css">
-    <link rel="stylesheet" href="bower_components/owl.carousel/src/css/owl.theme.default.css">
+    <!-- <link rel="stylesheet" href="bower_components/owl.carousel/src/css/owl.carousel.css"> -->
+    <!-- <link rel="stylesheet" href="bower_components/owl.carousel/src/css/owl.theme.default.css"> -->
 
     <link rel="stylesheet" href="/Content/css/Components/reset.css">
     <link rel="stylesheet" href="/Content/css/Components/reset-plugins.css">
@@ -19,16 +19,17 @@
     <link rel="stylesheet" href="/Content/css/Components/list.css">
     <link rel="stylesheet" href="/Content/css/Components/input.css">
     <link rel="stylesheet" href="/Content/css/Components/button.css">
+    <link rel="stylesheet" href="/Content/css/Components/breadcrumb.css">
 
-    <script src="bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="bower_components/owl.carousel/src/js/owl.carousel.js"></script>
-    <script src="Scripts/Scripts.js"></script>
+    <!-- <script src="bower_components/jquery/dist/jquery.min.js"></script> -->
+    <!-- <script src="bower_components/owl.carousel/src/js/owl.carousel.js"></script> -->
+    <!-- <script src="Scripts/Scripts.js"></script> -->
 
     <link rel="stylesheet" href="/Content/css/main.css">
 
     <header class="container container--center header">
         <div class="header__lang">
-            <a href="#">English version →</a>
+            <a href="">English version →</a>
         </div>
         <div class="header__logo">
             <img src="/Content/img/logo_25.png" alt="">
@@ -37,223 +38,75 @@
             <a href="tel:+74953631010">+7 (495) 363-10-10</a>
         </div>
         <!-- <div class="header__call">
-            <a href="#">заказать звонок</a>
+            <a href="">заказать звонок</a>
         </div> -->
     </header>
 
     <nav class="container container--center">
         <div class="col--1-1">
             <ul class="navbar">
-                <li><a href="#">Недвижимость</a></li>
-                <li><a href="#">Услуги</a></li>
-                <li><a href="#">Ипотека</a></li>
-                <li><a href="#">Карьера</a></li>
-                <li><a href="#">О компании</a></li>
-                <li><a href="#">Новости и аналитика</a></li>
-                <li><a href="#">Наши офисы</a></li>
+                <li><a href="#/nedvizhimost">Недвижимость</a></li>
+                <li><a href="#/">Услуги</a></li>
+                <li><a href="#/">Ипотека</a></li>
+                <li><a href="#/">Карьера</a></li>
+                <li><a href="#/">О компании</a></li>
+                <li><a href="#/">Новости и аналитика</a></li>
+                <li><a href="#/">Наши офисы</a></li>
             </ul>
         </div>
     </nav>
 
-    <div class="container container--center slider">
-        <div class="slider__shadow"></div>
-        <div class="panel">
-            <div class="owl-carousel">
-                <div>
-                    <a href="#">
-                        <img src="/Content/img/slider/slide-1.jpg" alt="">
-                    </a>
-                </div>
-                <div>
-                    <a href="#">
-                        <img src="/Content/img/slider/slide-2.jpg" alt="">
-                    </a>
-                </div>
-                <div>
-                    <a href="#">
-                        <img src="/Content/img/slider/slide-3.jpg" alt="">
-                    </a>
-                </div>
-                <div>
-                    <a href="#">
-                        <img src="/Content/img/slider/slide-4.jpg" alt="">
-                    </a>
-                </div>
-                <div>
-                    <a href="#">
-                        <img src="/Content/img/slider/slide-5.jpg" alt="">
-                    </a>
-                </div>
-                <div>
-                    <a href="#">
-                        <img src="/Content/img/slider/slide-6.jpg" alt="">
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="container container--center">
-
-        <div class="panel panel--box">
-            <h1 class="text--h1">Агентство недвижимости ИНКОМ&nbsp;— крупнейшее в&nbsp;Москве</h1>
-            <p>ИНКОМ-Недвижимость&nbsp;— агентство недвижимости, занимающее ведущие позиции на&nbsp;рынке риэлторских услуг.&nbsp;По&nbsp;оценкам экспертов, значительная часть организованных сделок в&nbsp;московском регионе приходится именно на&nbsp;«ИНКОМ», что позволяет нам вот уже многие годы занимать лидирующее место среди агентств недвижимости Москвы и&nbsp;Подмосковья.</p>
-
-            <ul class="grid grid-col--1-5 text--center list">
-                <li>
-                    <a href="#">
-                        <span class="list__teaser"><img src="/Content/img/cat/icon01.png" alt=""></span>
-                        <span class="list__link">Квартиры и комнаты</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <span class="list__teaser"><img src="/Content/img/cat/icon02.png" alt=""></span>
-                        <span class="list__link">Новостройки</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <span class="list__teaser"><img src="/Content/img/cat/icon03.png" alt=""></span>
-                        <span class="list__link">Аренда квартир и комнат</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <span class="list__teaser"><img src="/Content/img/cat/icon04.png" alt=""></span>
-                        <span class="list__link">Коттеджи, таунхаусы, участки</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <span class="list__teaser"><img src="/Content/img/cat/icon05.png" alt=""></span>
-                        <span class="list__link">Коммерческая недвижимость</span>
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </div>
-
-
-    <div class="container container--center">
-        <div class="panel panel--box panel--white">
-
-            <h3 class="text--h3">
-                Новости
-                <a href="#" class="text--h5 text--subscribe">Подписаться</a>
-            </h3>
-
-            <ul class="grid grid-col--1-4 list">
-                <li>
-                    <a href="#">
-                        <span class="list__teaser"><img src="/Content/img/news/news-1.png" alt=""></span>
-                    </a>
-                    <span class="list__date">13.05.2016</span>
-                    <a href="#" class="list__link">
-                        Цена ВИП-ложи на финальные игры Чемпионата мира по хоккею равна стоимости трехкомнатной квартиры в центре Москвы
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <span class="list__teaser"><img src="/Content/img/news/news-2.png" alt=""></span>
-                    </a>
-                    <span class="list__date">13.05.2016</span>
-                    <a href="#" class="list__link">
-                        «Респектабельное» Можайское шоссе за год потеряло в цене 46%, тогда как «неблагополучное» Горьковское подорожало на 18%
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <span class="list__teaser"><img src="/Content/img/news/news-3.png" alt=""></span>
-                    </a>
-                    <span class="list__date">13.05.2016</span>
-                    <a href="#" class="list__link">
-                        «Каникулярный» найм квартиры: сдал в Москве, снял в Крыму – усиливающийся тренд бюджетного отдыха
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <span class="list__teaser"><img src="/Content/img/news/news-4.png" alt=""></span>
-                    </a>
-                    <span class="list__date">13.05.2016</span>
-                    <a href="#" class="list__link">
-                        «Рекорды рынка недвижимости-2016»: голосуйте за лучших!
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </div>
-
-    <div class="container container--center">
-        <div class="panel panel--box">
-            <h2 class="text--h2">Продажа недвижимости в Москве и Подмосковье</h2>
-            <p>Агентство ИНКОМ-Недвижимость уже более 20 лет предоставляет риэлторские услуги юридическим и&nbsp;физическим лицам в&nbsp;ключевых сегментах рынка недвижимости: покупка и&nbsp;продажа квартир на&nbsp;первичном и&nbsp;вторичном рынках городского и&nbsp;загородного жилья, аренда квартир, а&nbsp;также проводим сделки с&nbsp;коммерческой недвижимостью. Жилая и&nbsp;коммерческая недвижимость Москвы и&nbsp;Московской области представлена в&nbsp;нашем каталоге в&nbsp;самом полном объеме, в&nbsp;наличии есть множество вариантов жилья различного типа, предоставляемого как с&nbsp;помощью риэлторов, так и&nbsp;без посредников.</p>
-            <p>Мы&nbsp;оказываем риэлторские услуги по&nbsp;аренде и&nbsp;продаже недвижимости во&nbsp;всех сегментах. С&nbsp;помощью наших специалистов вы&nbsp;сможете купить элитную недвижимость в&nbsp;Москве и&nbsp;Подмосковье, а&nbsp;также приобрести жилье эконом класса. В&nbsp;нашей базе недвижимости, содержащей огромное количество предложений, найдутся как эксклюзивные квартиры, так и&nbsp;бюджетные варианты, а&nbsp;также большое количество загородного жилья всех категорий. Специалисты нашего агентства помогут в&nbsp;подборе оптимального для вас варианта и&nbsp;оформят сделку по&nbsp;<nobr>купле продаже</nobr> недвижимости максимально надежно и&nbsp;быстро!</p>
-
-            <h2 class="text--h2">Каталог объектов</h2>
-            <p>Для получения информации по&nbsp;нашей базе недвижимости выберите подходящий тип объекта и&nbsp;нажмите «Найти».</p>
-
-            <div>
-                <!-- <input type="text" class="input"> -->
-                <select name="sources" class="input input--select" placeholder="Квартиры и комнаты">
-                    <option value="profile">Квартиры и комнаты</option>
-                    <option value="word">Новостройки</option>
-                    <option value="hashtag">Аренда квартир и комнат</option>
-                </select>
-                <a href="#" class="button button--green">Найти</a>
-            </div>
-        </div>
-    </div>
+    <ng-view></ng-view>
 
     <footer class="container container--center">
         <div class="footer">
             <div class="footer__top">
                 © 2001-2016. ИНКОМ-Недвижимость  |
-                <a href="#" class="link--reset" rel="nofollow">Ограничение ответственности</a> |
-                <a href="#" class="link--reset" rel="nofollow">Карта сайта</a>
+                <a href="" class="link--reset" rel="nofollow">Ограничение ответственности</a> |
+                <a href="" class="link--reset" rel="nofollow">Карта сайта</a>
 
                 <a class="phone" href="tel:+74953631010"><div class="ya-phone-uvr">+7 (495) 363-10-10</div></a>
             </div>
             <div class="footer__content">
                 <div class="grid grid--small grid-col--1-4">
                     <ul class="list">
-                        <li><a href="#" class="title">Недвижимость</a></li>
-                        <li><a href="#">Квартиры, комнаты</a></li>
-                        <li><a href="#">Новостройки</a></li>
-                        <li><a href="#">Аренда квартир, комнат</a></li>
-                        <li><a href="#">Коттеджи, таунхаусы, участки</a></li>
-                        <li><a href="#">Коттеджные поселки</a></li>
-                        <li><a href="#">Аренда коттеджей</a></li>
-                        <li><a href="#">Нежилые помещения</a></li>
-                        <li><a href="#">Аренда нежилых помещений</a></li>
+                        <li><a href="#/nedvizhimost" class="title">Недвижимость</a></li>
+                        <li><a href="">Квартиры, комнаты</a></li>
+                        <li><a href="">Новостройки</a></li>
+                        <li><a href="">Аренда квартир, комнат</a></li>
+                        <li><a href="">Коттеджи, таунхаусы, участки</a></li>
+                        <li><a href="">Коттеджные поселки</a></li>
+                        <li><a href="">Аренда коттеджей</a></li>
+                        <li><a href="">Нежилые помещения</a></li>
+                        <li><a href="">Аренда нежилых помещений</a></li>
 
                     </ul>
 
                     <ul class="list">
-                        <li><a href="#" class="title">Услуги</a></li>
-                        <li><a href="#">Обмен квартир</a></li>
-                        <li><a href="#">Помощь в получении ипотеки</a></li>
-                        <li><a href="#">Продать квартиру, комнату</a></li>
-                        <li><a href="#">Оценка недвижимости</a></li>
-                        <li><a href="#">Согласование перепланировок</a></li>
-                        <li><a href="#">Согласование отдельного входа</a></li>
-                        <li><a href="#">Лизинговые услуги</a></li>
-                        <li><a href="#" class="title">Все услуги</a></li>
+                        <li><a href="" class="title">Услуги</a></li>
+                        <li><a href="">Обмен квартир</a></li>
+                        <li><a href="">Помощь в получении ипотеки</a></li>
+                        <li><a href="">Продать квартиру, комнату</a></li>
+                        <li><a href="">Оценка недвижимости</a></li>
+                        <li><a href="">Согласование перепланировок</a></li>
+                        <li><a href="">Согласование отдельного входа</a></li>
+                        <li><a href="">Лизинговые услуги</a></li>
+                        <li><a href="" class="title">Все услуги</a></li>
                     </ul>
 
                     <ul class="list">
-                        <li><a href="#" class="title">Карьера</a></li>
-                        <li><a href="#" class="title">Ипотека</a></li>
-                        <li><a href="#">Вакансии</a></li>
-                        <li><a href="#">Учебный центр</a></li>
+                        <li><a href="" class="title">Карьера</a></li>
+                        <li><a href="" class="title">Ипотека</a></li>
+                        <li><a href="">Вакансии</a></li>
+                        <li><a href="">Учебный центр</a></li>
                     </ul>
 
                     <ul class="list">
-                        <li><a href="#" class="title">О компании</a></li>
-                        <li><a href="#">История</a></li>
-                        <li><a href="#">Награды</a></li>
-                        <li><a href="#">Отзывы клиентов</a></li>
-                        <li><a href="#" class="title">Наши офисы</a></li>
+                        <li><a href="" class="title">О компании</a></li>
+                        <li><a href="">История</a></li>
+                        <li><a href="">Награды</a></li>
+                        <li><a href="">Отзывы клиентов</a></li>
+                        <li><a href="" class="title">Наши офисы</a></li>
                     </ul>
                 </div>
             </div>
@@ -262,5 +115,8 @@
 
 
     <script src="/bower_components/angular/angular.min.js"></script>
+    <script src="/bower_components/angular-route/angular-route.min.js"></script>
+    <script src="Scripts/app.js"></script>
+
     </body>
 </html>
