add dropDown menu

--- a/index.html
+++ b/index.html
@@ -45,8 +45,62 @@
     <nav class="container container--center">
         <div class="col--1-1">
             <ul class="navbar">
-                <li><a href="#/nedvizhimost">Недвижимость</a></li>
-                <li><a href="#/">Услуги</a></li>
+                <li>
+                    <a href="#/nedvizhimost">Недвижимость</a>
+                    <div class="navbar__dropdown">
+                        <span class="navbar__arrow-top"><i></i></span>
+                        <ul>
+                            <li><span>Покупателям</span></li>
+                            <li><a href="#/">Покупка квартир и комнат</a></li>
+                            <li><a href="#/">Квартиры в новостройках</a></li>
+                            <li><a href="#/">Загородная недвижимость</a></li>
+                            <li><a href="#/">Помощь в получении ипотеки</a></li>
+                            <li><a href="#/">Коммерческая недвижимость</a></li>
+                            <li><a href="#/">Лизинговые услуги</a></li>
+                            <li><a href="#/">Программа лояльности</a></li>
+                        </ul>
+                        <ul>
+                            <li><span>Владельцам</span></li>
+                            <li><a href="#/">Продать квартиру, комнату</a></li>
+                            <li><a href="#/">Загородная недвижимость</a></li>
+                            <li><a href="#/">Обмен квартир</a></li>
+                            <li><a href="#/">Срочный выкуп квартир</a></li>
+                            <li><a href="#/">Сдать квартиру или коттедж</a></li>
+                            <li><a href="#/">Оценка недвижимости</a></li>
+                            <li><a href="#/">Коммерческая недвижимость</a></li>
+                            <li><a href="#/">Согласование перепланировок</a></li>
+                            <li><a href="#/">Согласование отдельного входа</a></li>
+                        </ul>
+                    </div>
+                </li>
+                <li>
+                    <a href="#/">Услуги</a>
+                    <div class="navbar__dropdown">
+                        <span class="navbar__arrow-top"><i></i></span>
+                        <ul>
+                            <li><span>Покупателям</span></li>
+                            <li><a href="#/">Покупка квартир и комнат</a></li>
+                            <li><a href="#/">Квартиры в новостройках</a></li>
+                            <li><a href="#/">Загородная недвижимость</a></li>
+                            <li><a href="#/">Помощь в получении ипотеки</a></li>
+                            <li><a href="#/">Коммерческая недвижимость</a></li>
+                            <li><a href="#/">Лизинговые услуги</a></li>
+                            <li><a href="#/">Программа лояльности</a></li>
+                        </ul>
+                        <ul>
+                            <li><span>Владельцам</span></li>
+                            <li><a href="#/">Продать квартиру, комнату</a></li>
+                            <li><a href="#/">Загородная недвижимость</a></li>
+                            <li><a href="#/">Обмен квартир</a></li>
+                            <li><a href="#/">Срочный выкуп квартир</a></li>
+                            <li><a href="#/">Сдать квартиру или коттедж</a></li>
+                            <li><a href="#/">Оценка недвижимости</a></li>
+                            <li><a href="#/">Коммерческая недвижимость</a></li>
+                            <li><a href="#/">Согласование перепланировок</a></li>
+                            <li><a href="#/">Согласование отдельного входа</a></li>
+                        </ul>
+                    </div>
+                </li>
                 <li><a href="#/">Ипотека</a></li>
                 <li><a href="#/">Карьера</a></li>
                 <li><a href="#/">О компании</a></li>
@@ -79,7 +133,6 @@
                         <li><a href="">Аренда коттеджей</a></li>
                         <li><a href="">Нежилые помещения</a></li>
                         <li><a href="">Аренда нежилых помещений</a></li>
-
                     </ul>
 
                     <ul class="list">
