Fixed filter panel, add button__group element

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <!-- <link rel="stylesheet" href="bower_components/owl.carousel/src/css/owl.carousel.css"> -->
     <!-- <link rel="stylesheet" href="bower_components/owl.carousel/src/css/owl.theme.default.css"> -->
 
+    <link rel="stylesheet" href="/bower_components/angular-bootstrap/ui-bootstrap-csp.css">
+
     <link rel="stylesheet" href="/Content/css/Components/reset.css">
     <link rel="stylesheet" href="/Content/css/Components/reset-plugins.css">
     <link rel="stylesheet" href="/Content/css/Components/grid.css">
@@ -51,7 +53,7 @@
                         <span class="navbar__arrow-top"><i></i></span>
                         <ul>
                             <li><span>Покупателям</span></li>
-                            <li><a href="#/">Покупка квартир и комнат</a></li>
+                            <li><a href="#/sale-realty/flats">Покупка квартир и комнат</a></li>
                             <li><a href="#/">Квартиры в новостройках</a></li>
                             <li><a href="#/">Загородная недвижимость</a></li>
                             <li><a href="#/">Помощь в получении ипотеки</a></li>
@@ -170,6 +172,7 @@
     <script src="/bower_components/angular/angular.min.js"></script>
     <script src="/bower_components/angular-route/angular-route.min.js"></script>
     <script src="Scripts/app.js"></script>
+    <script src="/bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
 
     </body>
 </html>
