Fixed filter panel and style

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="/Content/css/Components/list.css">
     <link rel="stylesheet" href="/Content/css/Components/input.css">
     <link rel="stylesheet" href="/Content/css/Components/button.css">
+    <link rel="stylesheet" href="/Content/css/Components/question-board.css">
     <link rel="stylesheet" href="/Content/css/Components/breadcrumb.css">
 
     <!-- <script src="bower_components/jquery/dist/jquery.min.js"></script> -->
@@ -30,14 +31,19 @@
     <link rel="stylesheet" href="/Content/css/main.css">
 
     <header class="container container--center header">
-        <div class="header__lang">
+        <div class="col--1-1 header__lang">
             <a href="">English version →</a>
         </div>
-        <div class="header__logo">
+        <div class="col--1-2 header__logo">
             <img src="/Content/img/logo_25.png" alt="">
         </div>
-        <div class="header__phone">
-            <a href="tel:+74953631010">+7 (495) 363-10-10</a>
+        <div class="col--1-2 header__phone">
+            <a href="tel:+74953631010" class="header__phone-number">+7 (495) 363-10-10</a>
+
+            <p class="margin--top">
+                <a link="#/" class="text--small link link--dotted text--italic">Заказать звонок</a>
+                <a link="#/" class="button button--small button--green">Оставьте заявку</a>
+            </p>
         </div>
         <!-- <div class="header__call">
             <a href="">заказать звонок</a>
