Fixed table search

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="/Content/css/Components/panel.css">
     <link rel="stylesheet" href="/Content/css/Components/list.css">
     <link rel="stylesheet" href="/Content/css/Components/input.css">
+    <link rel="stylesheet" href="/Content/css/Components/table.css">
     <link rel="stylesheet" href="/Content/css/Components/button.css">
     <link rel="stylesheet" href="/Content/css/Components/question-board.css">
     <link rel="stylesheet" href="/Content/css/Components/breadcrumb.css">
