Add slider in angular

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     </head>
     <body data-ng-controller="homeController">
 
-    <!-- <link rel="stylesheet" href="bower_components/owl.carousel/src/css/owl.carousel.css"> -->
-    <!-- <link rel="stylesheet" href="bower_components/owl.carousel/src/css/owl.theme.default.css"> -->
+    <link rel="stylesheet" href="bower_components/owl.carousel/src/css/owl.carousel.css">
+    <link rel="stylesheet" href="bower_components/owl.carousel/src/css/owl.theme.default.css">
 
     <link rel="stylesheet" href="/bower_components/angular-bootstrap/ui-bootstrap-csp.css">
 
@@ -24,10 +24,7 @@
     <link rel="stylesheet" href="/Content/css/Components/button.css">
     <link rel="stylesheet" href="/Content/css/Components/question-board.css">
     <link rel="stylesheet" href="/Content/css/Components/breadcrumb.css">
-
-    <!-- <script src="bower_components/jquery/dist/jquery.min.js"></script> -->
-    <!-- <script src="bower_components/owl.carousel/src/js/owl.carousel.js"></script> -->
-    <!-- <script src="Scripts/Scripts.js"></script> -->
+    <link rel="stylesheet" href="/Content/css/Components/gallery.css">
 
     <link rel="stylesheet" href="/Content/css/main.css">
 
@@ -43,12 +40,9 @@
 
             <p class="margin--top">
                 <a link="#/" class="text--small link link--dotted text--italic">Заказать звонок</a>
-                <a link="#/" class="button button--small button--green">Оставьте заявку</a>
+                <a link="#/" class="button button--small button--green margin--left-small">Оставьте заявку</a>
             </p>
         </div>
-        <!-- <div class="header__call">
-            <a href="">заказать звонок</a>
-        </div> -->
     </header>
 
     <nav class="container container--center">
@@ -134,47 +128,51 @@
                 <div class="grid grid--small grid-col--1-4">
                     <ul class="list">
                         <li><a href="#/nedvizhimost" class="title">Недвижимость</a></li>
-                        <li><a href="">Квартиры, комнаты</a></li>
-                        <li><a href="">Новостройки</a></li>
-                        <li><a href="">Аренда квартир, комнат</a></li>
-                        <li><a href="">Коттеджи, таунхаусы, участки</a></li>
-                        <li><a href="">Коттеджные поселки</a></li>
-                        <li><a href="">Аренда коттеджей</a></li>
-                        <li><a href="">Нежилые помещения</a></li>
-                        <li><a href="">Аренда нежилых помещений</a></li>
+                        <li><a href="#/">Квартиры, комнаты</a></li>
+                        <li><a href="#/">Новостройки</a></li>
+                        <li><a href="#/">Аренда квартир, комнат</a></li>
+                        <li><a href="#/">Коттеджи, таунхаусы, участки</a></li>
+                        <li><a href="#/">Коттеджные поселки</a></li>
+                        <li><a href="#/">Аренда коттеджей</a></li>
+                        <li><a href="#/">Нежилые помещения</a></li>
+                        <li><a href="#/">Аренда нежилых помещений</a></li>
                     </ul>
 
                     <ul class="list">
-                        <li><a href="" class="title">Услуги</a></li>
-                        <li><a href="">Обмен квартир</a></li>
-                        <li><a href="">Помощь в получении ипотеки</a></li>
-                        <li><a href="">Продать квартиру, комнату</a></li>
-                        <li><a href="">Оценка недвижимости</a></li>
-                        <li><a href="">Согласование перепланировок</a></li>
-                        <li><a href="">Согласование отдельного входа</a></li>
-                        <li><a href="">Лизинговые услуги</a></li>
-                        <li><a href="" class="title">Все услуги</a></li>
+                        <li><a href="#/" class="title">Услуги</a></li>
+                        <li><a href="#/">Обмен квартир</a></li>
+                        <li><a href="#/">Помощь в получении ипотеки</a></li>
+                        <li><a href="#/">Продать квартиру, комнату</a></li>
+                        <li><a href="#/">Оценка недвижимости</a></li>
+                        <li><a href="#/">Согласование перепланировок</a></li>
+                        <li><a href="#/">Согласование отдельного входа</a></li>
+                        <li><a href="#/">Лизинговые услуги</a></li>
+                        <li><a href="#/" class="title">Все услуги</a></li>
                     </ul>
 
                     <ul class="list">
-                        <li><a href="" class="title">Карьера</a></li>
-                        <li><a href="" class="title">Ипотека</a></li>
-                        <li><a href="">Вакансии</a></li>
-                        <li><a href="">Учебный центр</a></li>
+                        <li><a href="#/" class="title">Карьера</a></li>
+                        <li><a href="#/" class="title">Ипотека</a></li>
+                        <li><a href="#/">Вакансии</a></li>
+                        <li><a href="#/">Учебный центр</a></li>
                     </ul>
 
                     <ul class="list">
-                        <li><a href="" class="title">О компании</a></li>
-                        <li><a href="">История</a></li>
-                        <li><a href="">Награды</a></li>
-                        <li><a href="">Отзывы клиентов</a></li>
-                        <li><a href="" class="title">Наши офисы</a></li>
+                        <li><a href="#/" class="title">О компании</a></li>
+                        <li><a href="#/">История</a></li>
+                        <li><a href="#/">Награды</a></li>
+                        <li><a href="#/">Отзывы клиентов</a></li>
+                        <li><a href="#/" class="title">Наши офисы</a></li>
                     </ul>
                 </div>
             </div>
         </div>
     </footer>
 
+
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="bower_components/owl.carousel/src/js/owl.carousel.js"></script>
+    <!-- <script src="Scripts/Scripts.js"></script> -->
 
     <script src="/bower_components/angular/angular.min.js"></script>
     <script src="/bower_components/angular-route/angular-route.min.js"></script>
