--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ru" data-ng-app="app">
     <head>
@@ -13,6 +14,7 @@
 
     <link rel="stylesheet" href="/Content/css/Components/reset.css">
     <link rel="stylesheet" href="/Content/css/Components/reset-plugins.css">
+    <link rel="stylesheet" href="/Content/css/Components/icons.css">
     <link rel="stylesheet" href="/Content/css/Components/grid.css">
     <link rel="stylesheet" href="/Content/css/Components/navbar.css">
     <link rel="stylesheet" href="/Content/css/Components/text.css">
@@ -33,7 +35,9 @@
             <a href="">English version →</a>
         </div>
         <div class="col--1-2 header__logo">
-            <img src="/Content/img/logo_25.png" alt="">
+            <a href="#/">
+                <img src="/Content/img/logo_25.png" alt="">
+            </a>
         </div>
         <div class="col--1-2 header__phone">
             <a href="tel:+74953631010" class="header__phone-number">+7 (495) 363-10-10</a>
@@ -48,10 +52,11 @@
     <nav class="container container--center">
         <div class="col--1-1">
             <ul class="navbar">
-                <li>
-                    <a href="#/nedvizhimost">Недвижимость</a>
-                    <div class="navbar__dropdown">
-                        <span class="navbar__arrow-top"><i></i></span>
+                <li uib-dropdown is-open="status.isopen">
+                    <a id="single-button" href="/" uib-dropdown-toggle data-ng-disabled="disabled">
+                        Недвижимость
+                    </a>
+                    <div class="dropdown-menu" style="width: 500px;" uib-dropdown-menu role="menu" aria-labelledby="single-button">
                         <ul>
                             <li><span>Покупателям</span></li>
                             <li><a href="#/sale-realty/flats">Покупка квартир и комнат</a></li>
@@ -76,10 +81,11 @@
                         </ul>
                     </div>
                 </li>
-                <li>
-                    <a href="#/">Услуги</a>
-                    <div class="navbar__dropdown">
-                        <span class="navbar__arrow-top"><i></i></span>
+                <li uib-dropdown is-open="status.isopen2">
+                    <a id="single-button" href="/" uib-dropdown-toggle data-ng-disabled="disabled">
+                        Услуги
+                    </a>
+                    <div class="dropdown-menu dropdown-menu--1-3" style="width: 800px;" uib-dropdown-menu role="menu" aria-labelledby="single-button">
                         <ul>
                             <li><span>Покупателям</span></li>
                             <li><a href="#/">Покупка квартир и комнат</a></li>
@@ -102,13 +108,64 @@
                             <li><a href="#/">Согласование перепланировок</a></li>
                             <li><a href="#/">Согласование отдельного входа</a></li>
                         </ul>
+                        <ul>
+                            <li><span>Арендаторам</span></li>
+                            <li><a href="#/">Квартиры и комнаты</a></li>
+                            <li><a href="#/">Аренда коттеджей</a></li>
+                            <li><a href="#/">Нежилые помещения</a></li>
+                            <li><a href="#/">Лизинг для бизнеса</a></li>
+
+                            <li><span>Застройщикам</span></li>
+                            <li><a href="#/">Девелоперский консалтинг загородной недвижимости</a></li>
+                            <li><a href="#/">Управление продажами коттеджного поселка</a></li>
+                        </ul>
                     </div>
                 </li>
                 <li><a href="#/">Ипотека</a></li>
-                <li><a href="#/">Карьера</a></li>
-                <li><a href="#/">О компании</a></li>
-                <li><a href="#/">Новости и аналитика</a></li>
-                <li><a href="#/">Наши офисы</a></li>
+                <li uib-dropdown is-open="status.isopenCarrera">
+                    <a id="single-button" href="/" uib-dropdown-toggle data-ng-disabled="disabled">
+                        Карьера
+                    </a>
+                    <div class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+                        <ul>
+                            <li><a href="#/">Вакансии</a></li>
+                            <li><a href="#/">Учебный центр</a></li>
+                            <li><a href="#/">Истории успеха</a></li>
+                        </ul>
+                    </div>
+                </li>
+
+                <li uib-dropdown is-open="status.isopenAbout">
+                    <a id="single-button" href="/" uib-dropdown-toggle data-ng-disabled="disabled">
+                        О компании
+                    </a>
+                    <div class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+                        <ul>
+                            <li><a href="#/">Деятельность компании</a></li>
+                            <li><a href="#/">История</a></li>
+                            <li><a href="#/">Награды</a></li>
+                            <li><a href="#/">Отзывы клиентов</a></li>
+                            <li><a href="#/">Наши партнеры</a></li>
+                            <li><a href="#/">Социальная ответственность</a></li>
+                        </ul>
+                    </div>
+                </li>
+
+                <li uib-dropdown is-open="status.isopenNews">
+                    <a id="single-button" href="/" uib-dropdown-toggle data-ng-disabled="disabled">
+                        Новости и аналитика
+                    </a>
+                    <div class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+                        <ul>
+                            <li><a href="#/">Пресс-центр</a></li>
+                            <li><a href="#/">Новости рынка</a></li>
+                            <li><a href="#/">Новости компании</a></li>
+                            <li><a href="#/">Мы в прессе</a></li>
+                            <li><a href="#/">ИНКОМ в эфире</a></li>
+                        </ul>
+                    </div>
+                </li>
+                <li><a href="#/offices" class="active">Наши офисы</a></li>
             </ul>
         </div>
     </nav>
