--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <ul>
                             <li><span>Покупателям</span></li>
                             <li><a href="#/sale-realty/flats">Покупка квартир и комнат</a></li>
-                            <li><a href="#/">Квартиры в новостройках</a></li>
+                            <li><a href="#/sale-realty/newbuild">Квартиры в новостройках</a></li>
                             <li><a href="#/">Загородная недвижимость</a></li>
                             <li><a href="#/">Помощь в получении ипотеки</a></li>
                             <li><a href="#/">Коммерческая недвижимость</a></li>
