Add new table for Houdeds

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <link rel="stylesheet" href="/Content/css/Components/text.css">
     <link rel="stylesheet" href="/Content/css/Components/utilits.css">
     <link rel="stylesheet" href="/Content/css/Components/panel.css">
+    <link rel="stylesheet" href="/Content/css/Components/build.css">
+    <link rel="stylesheet" href="/Content/css/Components/badge.css">
     <link rel="stylesheet" href="/Content/css/Components/list.css">
     <link rel="stylesheet" href="/Content/css/Components/input.css">
     <link rel="stylesheet" href="/Content/css/Components/table.css">
@@ -61,7 +63,7 @@
                             <li><span>Покупателям</span></li>
                             <li><a href="#/sale-realty/flats">Покупка квартир и комнат</a></li>
                             <li><a href="#/sale-realty/newbuild">Квартиры в новостройках</a></li>
-                            <li><a href="#/">Загородная недвижимость</a></li>
+                            <li><a href="#/prodazha-domov-kottedzhej">Загородная недвижимость</a></li>
                             <li><a href="#/">Помощь в получении ипотеки</a></li>
                             <li><a href="#/">Коммерческая недвижимость</a></li>
                             <li><a href="#/">Лизинговые услуги</a></li>
