--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="/Content/css/Components/utilits.css">
     <link rel="stylesheet" href="/Content/css/Components/panel.css">
     <link rel="stylesheet" href="/Content/css/Components/build.css">
+    <link rel="stylesheet" href="/Content/css/Components/block.css">
     <link rel="stylesheet" href="/Content/css/Components/badge.css">
     <link rel="stylesheet" href="/Content/css/Components/list.css">
     <link rel="stylesheet" href="/Content/css/Components/input.css">
@@ -123,7 +124,7 @@
                         </ul>
                     </div>
                 </li>
-                <li><a href="#/">Ипотека</a></li>
+                <li><a href="#/ipoteka">Ипотека</a></li>
                 <li uib-dropdown is-open="status.isopenCarrera">
                     <a id="single-button" href="/" uib-dropdown-toggle data-ng-disabled="disabled">
                         Карьера
