--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="/Content/css/Components/text.css">
     <link rel="stylesheet" href="/Content/css/Components/utilits.css">
     <link rel="stylesheet" href="/Content/css/Components/panel.css">
+    <link rel="stylesheet" href="/Content/css/Components/slider.css">
     <link rel="stylesheet" href="/Content/css/Components/build.css">
     <link rel="stylesheet" href="/Content/css/Components/block.css">
     <link rel="stylesheet" href="/Content/css/Components/badge.css">
@@ -59,28 +60,23 @@
                     <a id="single-button" href="/" uib-dropdown-toggle data-ng-disabled="disabled">
                         Недвижимость
                     </a>
-                    <div class="dropdown-menu" style="width: 500px;" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+                    <div class="dropdown-menu" style="width: 700px;" uib-dropdown-menu role="menu" aria-labelledby="single-button">
                         <ul>
-                            <li><span>Покупателям</span></li>
-                            <li><a href="#/sale-realty/flats">Покупка квартир и комнат</a></li>
-                            <li><a href="#/sale-realty/newbuild">Квартиры в новостройках</a></li>
-                            <li><a href="#/prodazha-domov-kottedzhej">Загородная недвижимость</a></li>
-                            <li><a href="#/">Помощь в получении ипотеки</a></li>
-                            <li><a href="#/">Коммерческая недвижимость</a></li>
-                            <li><a href="#/">Лизинговые услуги</a></li>
-                            <li><a href="#/">Программа лояльности</a></li>
+                            <li><span>Городская</span></li>
+                            <li><a href="#/sale-realty/flats/" class="text--bold">Квартиры и комнаты</a></li>
+                            <li><a href="#/">Новостройки</a></li>
+                            <li><a href="#/">Аренда квартир и комнат</a></li>
                         </ul>
                         <ul>
-                            <li><span>Владельцам</span></li>
-                            <li><a href="#/">Продать квартиру, комнату</a></li>
-                            <li><a href="#/">Загородная недвижимость</a></li>
-                            <li><a href="#/">Обмен квартир</a></li>
-                            <li><a href="#/">Срочный выкуп квартир</a></li>
-                            <li><a href="#/">Сдать квартиру или коттедж</a></li>
-                            <li><a href="#/">Оценка недвижимости</a></li>
-                            <li><a href="#/">Коммерческая недвижимость</a></li>
-                            <li><a href="#/">Согласование перепланировок</a></li>
-                            <li><a href="#/">Согласование отдельного входа</a></li>
+                            <li><span>Загородная</span></li>
+                            <li><a href="#/">Коттеджи, таунхаусы, участки</a></li>
+                            <li><a href="#/">Коттеджные поселки</a></li>
+                            <li><a href="#/">Аренда коттеджей</a></li>
+                        </ul>
+                        <ul>
+                            <li><span>Коммерческая</span></li>
+                            <li><a href="#/">Продажа нежилых помещений</a></li>
+                            <li><a href="#/">Аренда нежилых помещений</a></li>
                         </ul>
                     </div>
                 </li>
@@ -91,9 +87,9 @@
                     <div class="dropdown-menu dropdown-menu--1-3" style="width: 800px;" uib-dropdown-menu role="menu" aria-labelledby="single-button">
                         <ul>
                             <li><span>Покупателям</span></li>
-                            <li><a href="#/">Покупка квартир и комнат</a></li>
-                            <li><a href="#/">Квартиры в новостройках</a></li>
-                            <li><a href="#/">Загородная недвижимость</a></li>
+                            <li><a href="#/sale-realty/flats">Покупка квартир и комнат</a></li>
+                            <li><a href="#/sale-realty/newbuild">Квартиры в новостройках</a></li>
+                            <li><a href="#/prodazha-domov-kottedzhej">Загородная недвижимость</a></li>
                             <li><a href="#/">Помощь в получении ипотеки</a></li>
                             <li><a href="#/">Коммерческая недвижимость</a></li>
                             <li><a href="#/">Лизинговые услуги</a></li>
