--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
                     <a id="single-button" href="/" uib-dropdown-toggle data-ng-disabled="disabled">
                         Карьера
                     </a>
-                    <div class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+                    <div class="dropdown-menu" style="width: 190px;" uib-dropdown-menu role="menu" aria-labelledby="single-button">
                         <ul>
-                            <li><a href="#/">Вакансии</a></li>
+                            <li><a href="#/jobs/vacancy/">Вакансии</a></li>
                             <li><a href="#/">Учебный центр</a></li>
                             <li><a href="#/">Истории успеха</a></li>
                         </ul>
