add page training-center

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     <div class="dropdown-menu" style="width: 190px;" uib-dropdown-menu role="menu" aria-labelledby="single-button">
                         <ul>
                             <li><a href="#/jobs/vacancy/">Вакансии</a></li>
-                            <li><a href="#/">Учебный центр</a></li>
+                            <li><a href="#/jobs/training-center/">Учебный центр</a></li>
                             <li><a href="#/">Истории успеха</a></li>
                         </ul>
                     </div>
