Add new page jobs/success

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         <ul>
                             <li><a href="#/jobs/vacancy/">Вакансии</a></li>
                             <li><a href="#/jobs/training-center/">Учебный центр</a></li>
-                            <li><a href="#/">Истории успеха</a></li>
+                            <li><a href="#/jobs/success/">Истории успеха</a></li>
                         </ul>
                     </div>
                 </li>
