Add page company.html

--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
                     <a id="single-button" href="/" uib-dropdown-toggle data-ng-disabled="disabled">
                         О компании
                     </a>
-                    <div class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+                    <div class="dropdown-menu" style="width: 270px;" uib-dropdown-menu role="menu" aria-labelledby="single-button">
                         <ul>
-                            <li><a href="#/">Деятельность компании</a></li>
+                            <li><a href="#/company/company/">Деятельность компании</a></li>
                             <li><a href="#/">История</a></li>
                             <li><a href="#/">Награды</a></li>
                             <li><a href="#/">Отзывы клиентов</a></li>
