Add new page hostory

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="/Content/css/Components/panel.css">
     <link rel="stylesheet" href="/Content/css/Components/slider.css">
     <link rel="stylesheet" href="/Content/css/Components/build.css">
+    <link rel="stylesheet" href="/Content/css/Components/timeline.css">
     <link rel="stylesheet" href="/Content/css/Components/block.css">
     <link rel="stylesheet" href="/Content/css/Components/badge.css">
     <link rel="stylesheet" href="/Content/css/Components/list.css">
@@ -141,7 +142,7 @@
                     <div class="dropdown-menu" style="width: 270px;" uib-dropdown-menu role="menu" aria-labelledby="single-button">
                         <ul>
                             <li><a href="#/company/company/">Деятельность компании</a></li>
-                            <li><a href="#/">История</a></li>
+                            <li><a href="#/company/history/">История</a></li>
                             <li><a href="#/">Награды</a></li>
                             <li><a href="#/">Отзывы клиентов</a></li>
                             <li><a href="#/">Наши партнеры</a></li>
