add page review

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                             <li><a href="#/company/company/">Деятельность компании</a></li>
                             <li><a href="#/company/history/">История</a></li>
                             <li><a href="#/">Награды</a></li>
-                            <li><a href="#/">Отзывы клиентов</a></li>
+                            <li><a href="#/company/review/">Отзывы клиентов</a></li>
                             <li><a href="#/">Наши партнеры</a></li>
                             <li><a href="#/">Социальная ответственность</a></li>
                         </ul>
