--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     </a>
                     <div class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
                         <ul>
-                            <li><a href="#/">Пресс-центр</a></li>
+                            <li><a href="#/news/press/">Пресс-центр</a></li>
                             <li><a href="#/">Новости рынка</a></li>
                             <li><a href="#/">Новости компании</a></li>
                             <li><a href="#/">Мы в прессе</a></li>
