Add page kotteg and arenda-kottedzhey

--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
                         <ul>
                             <li><span>Городская</span></li>
                             <li><a href="#/sale-realty/flats/" class="text--bold">Квартиры и комнаты</a></li>
-                            <li><a href="#/">Новостройки</a></li>
-                            <li><a href="#/">Аренда квартир и комнат</a></li>
+                            <li><a href="#/sale-realty/newbuild/">Новостройки</a></li>
+                            <li><a href="#/rent-realty/flats/">Аренда квартир и комнат</a></li>
                         </ul>
                         <ul>
                             <li><span>Загородная</span></li>
-                            <li><a href="#/">Коттеджи, таунхаусы, участки</a></li>
-                            <li><a href="#/">Коттеджные поселки</a></li>
-                            <li><a href="#/">Аренда коттеджей</a></li>
+                            <li><a href="#/prodazha-domov-kottedzhej/">Коттеджи, таунхаусы, участки</a></li>
+                            <li><a href="#/prodazha-domov-kottedzhej/">Коттеджные поселки</a></li>
+                            <li><a href="#/arenda-kottedzhey/">Аренда коттеджей</a></li>
                         </ul>
                         <ul>
                             <li><span>Коммерческая</span></li>
@@ -85,7 +85,7 @@
                     <a id="single-button" href="/" uib-dropdown-toggle data-ng-disabled="disabled">
                         Услуги
                     </a>
-                    <div class="dropdown-menu dropdown-menu--1-3" style="width: 800px;" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+                    <div class="dropdown-menu dropdown-menu--1-3" style="width: 910px;" uib-dropdown-menu role="menu" aria-labelledby="single-button">
                         <ul>
                             <li><span>Покупателям</span></li>
                             <li><a href="#/sale-realty/flats">Покупка квартир и комнат</a></li>
