add page prodaja-nezhilyh-pomeshcheniy

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         </ul>
                         <ul>
                             <li><span>Коммерческая</span></li>
-                            <li><a href="#/">Продажа нежилых помещений</a></li>
+                            <li><a href="#/prodaja-nezhilyh-pomeshcheniy/">Продажа нежилых помещений</a></li>
                             <li><a href="#/">Аренда нежилых помещений</a></li>
                         </ul>
                     </div>
