--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <ul>
                             <li><span>Коммерческая</span></li>
                             <li><a href="#/prodaja-nezhilyh-pomeshcheniy/">Продажа нежилых помещений</a></li>
-                            <li><a href="#/">Аренда нежилых помещений</a></li>
+                            <li><a href="#/prodaja-nezhilyh-pomeshcheniy/">Аренда нежилых помещений</a></li>
                         </ul>
                     </div>
                 </li>
