Add page uslugi/pokupka-kvartir-i-komnat/

--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
                     <div class="dropdown-menu dropdown-menu--1-3" style="width: 910px;" uib-dropdown-menu role="menu" aria-labelledby="single-button">
                         <ul>
                             <li><span>Покупателям</span></li>
-                            <li><a href="#/sale-realty/flats">Покупка квартир и комнат</a></li>
-                            <li><a href="#/sale-realty/newbuild">Квартиры в новостройках</a></li>
-                            <li><a href="#/prodazha-domov-kottedzhej">Загородная недвижимость</a></li>
+                            <li><a href="#/uslugi/pokupka-kvartir-i-komnat/">Покупка квартир и комнат</a></li>
+                            <li><a href="#/">Квартиры в новостройках</a></li>
+                            <li><a href="#/">Загородная недвижимость</a></li>
                             <li><a href="#/">Помощь в получении ипотеки</a></li>
                             <li><a href="#/">Коммерческая недвижимость</a></li>
                             <li><a href="#/">Лизинговые услуги</a></li>
